src/test/ui/reachable/expr_assign.stderr
error: unreachable expression
  --> $DIR/expr_assign.rs:20:5
   |
20 |     x = return; //~ ERROR unreachable
   |     ^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_assign.rs:14:9
   |
14 | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable expression
  --> $DIR/expr_assign.rs:30:14
   |
30 |         *p = return; //~ ERROR unreachable
   |              ^^^^^^

error: unreachable expression
  --> $DIR/expr_assign.rs:36:15
   |
36 |     *{return; &mut i} = 22; //~ ERROR unreachable
   |               ^^^^^^

error: aborting due to 3 previous errors

